# witch

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: exact.rs  main.rs  matcher.rs  path_scan.rs  picker.rs
tests/: cli.rs
