[package]
name = "witch-cli"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
description = "A typo-tolerant which: fuzzy-matches command names against PATH executables and prints which-style paths"
license = "MIT"
authors = ["Thomas Björk <codedv8@gmail.com>"]
homepage = "https://github.com/codedeviate/witch"
repository = "https://github.com/codedeviate/witch"
documentation = "https://github.com/codedeviate/witch#readme"
readme = "README.md"
keywords = ["which", "fuzzy", "typo", "search", "command-line"]
categories = ["command-line-utilities"]
exclude = [
    ".claude/",
    ".git/",
    ".github/",
    "/.gitignore",
]

[[bin]]
name = "witch"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
dialoguer = "0.12.0"
libc = "0.2"
strsim = "0.11.1"

[dev-dependencies]
assert_cmd = "2.2.2"
predicates = "3.1.4"
tempfile = "3.27.0"
